BraveBear/force-app/main/default/objects/Order_Line_Item__c/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity Available</label>
    <type>Checkbox</type>
</CustomField>